# asteroidinhos

./: CHANGELOG.md  LICENSE  asteroidinhos.cabal
app/: Main.hs
src/Game/: Core.hs  Events.hs  Render.hs  State.hs  Update.hs
src/Media/: Pictures.hs
